--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -8,3 +8,11 @@ employee.age.range=Age must be between 16 and 75
 employee.title.notBlank=Title must not be blank
 employee.name.duplicate=Multiple employees with the name "{0}" exist
 employee.delete.failed=Deletion failed for employee: {0}
+employee.create.failed=Creation of employee failed
+validation.failed=Validation Failed for the input
+employee.error=Employee processing failed: {0}
+generic.error=Internal Server Error : unable to process request
+too.many.requests=Too Many Requests: {0}
+employee.fetch.success=Success
+employee.created.success=Created
+employee.deleted.success=Deleted
